--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.8"
 "discord.py" = "^1.5.1"
 python-dotenv = "^0.15.0"
 wavelink = "^0.9.6"
+jishaku = "^1.20.0"
 
 [tool.poetry.dev-dependencies]
 
